<resources>
    <string name="app_name">Navigation Component</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="already_registered_try_signing_in">Already registered? Try signing in</string>
</resources>