<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_24dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/bg_edittext_pink_stroked"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black3"
                android:textSize="@dimen/text_size_h8" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/bg_edittext_pink_stroked"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/black3"
                android:textSize="@dimen/text_size_h8" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:background="@drawable/bg_edittext_pink_stroked"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black3"
                android:textSize="@dimen/text_size_h8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/bg_button_pink"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_h7" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4dp"
                android:text="@string/already_registered_try_signing_in"
                android:textColor="@color/black2"
                android:textSize="@dimen/text_size_h8" />

        </LinearLayout>

    </FrameLayout>

</layout>