<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SignInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_24dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/bg_edittext_black_stroked"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/colorGold"
                android:textSize="@dimen/text_size_h8" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:background="@drawable/bg_edittext_black_stroked"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorGold"
                android:textSize="@dimen/text_size_h8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/bg_button_black"
                android:text="@string/sign_in"
                android:textColor="@color/colorGold"
                android:textSize="@dimen/text_size_h7" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4dp"
                android:text="@string/don_t_have_account_sign_up"
                android:textColor="@color/black2"
                android:textSize="@dimen/text_size_h8" />

        </LinearLayout>

    </FrameLayout>

</layout>
